lintian-brush (0.44) UNRELEASED; urgency=medium

  * Cope with continuations at the end of debian/rules files.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 02 Dec 2019 14:37:26 +0000

lintian-brush (0.43) unstable; urgency=medium

  * Add fixer for font-package-not-multi-arch-foreign.
  * Actually install lintian-brush.conf(5) manpage.
  * Don't drop unnecessary overrides unless making other changes.
  * Disable credentials prompting when probing VCS URLs. Closes: #942648

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 28 Nov 2019 08:43:50 +0000

lintian-brush (0.41) unstable; urgency=medium

  * Probe Homepage URL for VCS attributes.
  * Fix finding of upstream repository for SourceForge projects.
  * Pick up GitHub issues locations from README.
  * Don't leave behind backup files when comparing uscan watch files.
  * dh-quilt-addon-but-quilt-source-format: only drop quilt if package
    is on the 3.0 (quilt) format.
  * Add lintian-brush.conf(5) manpage.
  * Add an update-changelog variable.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 27 Nov 2019 04:36:35 +0000

lintian-brush (0.40) unstable; urgency=medium

  * Fix stripping the last argument to --with.
  * Set somewhat more aggressive timeout for HTTP requests.
  * Properly cope with trailing commas when adding dependencies.
  * Replace spaces with dashes in license ids, for all SPDX license
    names. Closes: #942722
  * Update standards version to 4.4.1, no changes needed.
  * Remove unnecessary 'git' usernames from salsa and github URLs.
  * Fix including branch names for GitHub URLs.
  * Don't remove Built-Using variables that are unrelated to go.
  * Support more complex alioth URLs.
  * Support updating non-trivial debhelper dependencies.
  * init.d-script-needs-depends-on-lsb-base: don't add lsb-base
    dependency if one already exists.
  * Migrate python_distutils arguments to pybuild.
  * Fix debhelper argument order when upgrading to debhelper 12.