@@ -1,0 +1,2 @@
+Make debian/rules executable.
+Fixed-Lintian-Tags: debian-rules-not-executable
